Add feature discovery

--- a/index.html
+++ b/index.html
@@ -79,15 +79,21 @@
                 <h2>Data Analysis • Data Visualization</h2>
             </div>
         </div>
-        <div id="margin-top" style="min-height: 30vh;">
+        <div id="margin-top" style="min-height: 33vh;">
         </div>
-		<div id="title" class="title base-color">
+		<div id="title" class="title">
             <h1>Meili Vanegas-Hernandez</h1>
 			<h2>Data Analysis • Data Visualization</h2>
 		</div>
+        <div style="min-height: 15vh;"></div>
+        <div class="center-align">
+            <a id="transition-title" class="grey darken-4 btn-floating btn-large scale-transition scale-out">
+                <i class="large material-icons">keyboard_arrow_down</i>
+            </a>
+        </div>
+        <!-- <br>
         <br>
-        <br>
-        <br>
+        <br> -->
         <div id="experience">
             <table>
                 <tr>
