--- a/index.html
+++ b/index.html
@@ -85,15 +85,13 @@
             <h1>Meili Vanegas-Hernandez</h1>
 			<h2>Data Analysis • Data Visualization</h2>
 		</div>
-        <div style="min-height: 15vh;"></div>
-        <div class="center-align">
-            <a id="transition-title" class="grey darken-4 btn-floating btn-large scale-transition scale-out">
-                <i class="large material-icons">keyboard_arrow_down</i>
-            </a>
+        <div class="valign-wrapper center-align" style="min-height: 33vh;display: block;">
+            <!-- <div class="center-align"> -->
+                <a id="transition-title" class="grey darken-4 btn-floating btn-large scale-transition scale-out">
+                    <i class="large material-icons">keyboard_arrow_down</i>
+                </a>
+            <!-- </div> -->
         </div>
-        <!-- <br>
-        <br>
-        <br> -->
         <div id="experience">
             <table>
                 <tr>
