--- a/index.html
+++ b/index.html
@@ -48,25 +48,26 @@
 	<!-- Waypoints -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
 
+	<!-- Load Modules -->
+	<script src="/js/force_graph.js"></script>
+	<script src="/js/tree_map.js"></script>
+
 	<!-- Create an element where the map will take place -->
-	<script>
-	</script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.4.4/d3.min.js" integrity="sha512-hnFpvCiJ8Fr1lYLqcw6wLgFUOEZ89kWCkO+cEekwcWPIPKyknKV1eZmSSG3UxXfsSuf+z/SgmiYB1zFOg3l2UQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.4.4/d3.js" integrity="sha512-2HzGkktraohDBtvSaexjuftShxiwEN3Ij/QrZ+9PdlfjoS/RT4mekHLa3L9D4+dc1/yhSWMw19PQWfmn5m9DMw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
 
-	<script>
-		(function (i, s, o, g, r, a, m) {
-			i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-				(i[r].q = i[r].q || []).push(arguments)
-			}, i[r].l = 1 * new Date(); a = s.createElement(o),
-				m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-59KJXFT62T"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-		ga('create', 'UA-86419002-2', 'auto');
-		ga('send', 'pageview');
+    gtag('config', 'G-59KJXFT62T');
+    </script>
 
-	</script>
+    <!-- Style -->
 	<link rel="stylesheet" href="/assets/style.css">
 
 </head>
@@ -92,120 +93,132 @@
                 </a>
             <!-- </div> -->
         </div>
-        <div id="experience">
-            <table>
-                <tr>
-                    <td>
-                        <p class="table-title">2023</p>
-                    </td>
-                    <td class="table-info">
-                        <p>Data and Policy Analyst</p>
-                        <p><a target="_blank" style="font-style: italic;padding-left: 0cm;"
-                                href="https://sandbag.be">Sandbag</a>
-                        </p>
-                        <p>Managing data workflows for models and analytical tools like the Carbon Price Viewer, the EU ETS dashboard and the interactive Marginal Abatement Cost curve.</p>
-                    </td>
-                </tr>							
-                <tr>
-                    <td>
-                        <p class="table-title">2021 2023</p>
-                    </td>
-                    <td class="table-info">
-                        <p>BI Analyst</p>
-                        <p><a target="_blank" style="font-style: italic;padding-left: 0cm;"
-                                href="https://lineas.net/en/">Lineas</a>
-                        </p>
-                        <p>Abstracting useful data from different systems needed in train operations, designing KPIs and building dashboards to support decision-making.</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <p class="table-title">2020 2021</p>
-                    </td>
-                    <td class="table-info">
-                        <p>Data Analyst</p>
-                        <p><a target="_blank" style="font-style: italic;padding-left: 0cm;"
-                                href="https://www.rtbf.be/">RTBF</a>
-                        </p>
-                        <p>Introducing data-driven decision-making into publishing, editorial, and marketing processes, while also developing a robust DataOps environment.</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <p class="table-title">2019 2020</p>
-                    </td>
-                    <td class="table-info">
-                        <p>Consultant</p>
-                        <p><a target="_blank" style="font-style: italic;padding-left: 0cm;"
-                                href="https://be.steergroup.com/">Steer</a>
-                        </p>
-                        <p>Participating in transport model projects in different cities in Latin America.
-                            Developing data-driven systems for
-                            decision making in transport and urbanism.</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <p class="table-title">2018</p>
-                    </td>
-                    <td class="table-info">
-                        <p>Developer</p>
-                        <p><a target="_blank" style="font-style: italic;padding-left: 0cm;"
-                                href="https://dexon.us/">Dexon</a></p>
-                        <p>Participating in the project for processes automation for health public entities.
-                            Helping to extract, transform, load
-                            (ETL) data to visualize it in interactive dashboards.</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <p class="table-title">2017 2018</p>
-                    </td>
-                    <td class="table-info">
-                        <p>Research Assistant</p>
-                        <p><a target="_blank" style="font-style: italic;padding-left: 0cm;"
-                                href="https://hci.uni-kl.de/">Computer Graphics & HCI Group at TUK</a></p>
-                        <p>Designing and implementing a visual analytics tool to support failure detection
-                            in manufacturing processes.</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <p class="table-title">2017</p>
-                    </td>
-                    <td class="table-info">
-                        <p>Researcher</p>
-                        <p><a target="_blank" style="font-style: italic;padding-left: 0cm;"
-                                href="http://alianzacaoba.co/">Alianza Caoba</a></p>
-                        <p>Participating in a project along with the Secretary of Finance in Bogota to
-                            identify inaccurate taxpayers in real
-                            property taxes.
-                        </p>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <p class="table-title">2016</p>
-                    </td>
-                    <td class="table-info">
-                        <p>Junior Researcher</p>
-                        <p><a target="_blank" style="font-style: italic;padding-left: 0cm;"
-                                href="https://www.i3s.unice.fr/en">I3S and Espace Laboratory at Sophia
-                                Antipolis</a></p>
-                        <p>Working in the project Transport Oriented Modeling for urban denSification
-                            Analysis (TOMSA)/ECOS Nord. Building a urban
-                            decision support platform, which holds a Urban Agent-Based Model (ABM) to
-                            simulate the relocation of households under a
-                            spatial and possibilistic scenario and visualize multiple scenarios.
-                        </p>
-                    </td>
-                </tr>
-            </table>
-        </div>     
-		<!-- <div class="father">
-			<div class="left" id="forceChartDiv"></div>
-			<div class="right" id="details"></div>
-		</div> -->
+        <div id="tools" class="parent">
+            <div id="svg-tools" class="left"></div>
+            <div id="svg-skills" class="left tree-map"></div>
+            <div id="details-tools" class="right">
+                <table>
+                    <tr id="experience-Sandbag" class="experience">
+                        <td>
+                            <p class="table-title">2023</p>
+                        </td>
+                        <td class="table-info">
+                            <p>Data and Policy Analyst</p>
+                            <p><a target="_blank" style="font-style: italic;padding-left: 0cm;"
+                                    href="https://sandbag.be">Sandbag</a>
+                            </p>
+                            <p>Performed quantitative analysis of EU carbon markets such as ETS and CBAM to
+                                support data-driven advocacy.</p>
+                            <p>Managed and developed data flows, dashboards, and analytical tools that supported
+                                loophole identification in policies, enhancing policy analysis.</p>
+                        </td>
+                    </tr>							
+                    <tr id="experience-Lineas" class="experience">
+                        <td>
+                            <p class="table-title">2021 2023</p>
+                        </td>
+                        <td class="table-info">
+                            <p>Business Intelligence Analyst</p>
+                            <p><a target="_blank" style="font-style: italic;padding-left: 0cm;"
+                                    href="https://lineas.net/en/">Lineas</a>
+                            </p>
+                            <p>Translated business needs into data projects, extracting, transforming,
+                                and presenting KPIs across various organisational areas and supporting
+                                decision-making.</p>
+                            <p>Provided Tableau training to creators and business partners, enhancing their ability
+                                to utilise dashboards for decision-making.</p>
+                        </td>
+                    </tr>
+                    <tr id="experience-RTBF" class="experience">
+                        <td>
+                            <p class="table-title">2020 2021</p>
+                        </td>
+                        <td class="table-info">
+                            <p>Data Analyst</p>
+                            <p><a target="_blank" style="font-style: italic;padding-left: 0cm;"
+                                    href="https://www.rtbf.be/">RTBF</a>
+                            </p>
+                            <p>Introduced data-driven decision-making into publishing, editorial, and marketing
+                                processes while developing a robust DataOps environment.</p>
+                            <p>Participated in the creation of the recommendation system and collaborated with
+                                journalists on producing data-driven and interactive content.</p>
+                        </td>
+                    </tr>
+                    <tr id="experience-Steer" class="experience">
+                        <td>
+                            <p class="table-title">2019 2020</p>
+                        </td>
+                        <td class="table-info">
+                            <p>Consultant</p>
+                            <p><a target="_blank" style="font-style: italic;padding-left: 0cm;"
+                                    href="https://be.steergroup.com/">Steer</a>
+                            </p>
+                            <p>Participated in transport model projects for various Latin American cities
+                                supporting urban planning decisions.</p>
+                            <p>Developed a visual analytics tool for trip matrices
+                                decision making in transport and urbanism.</p>
+                        </td>
+                    </tr>
+                    <tr id="experience-Dexon" class="experience">
+                        <td>
+                            <p class="table-title">2018</p>
+                        </td>
+                        <td class="table-info">
+                            <p>Developer</p>
+                            <p><a target="_blank" style="font-style: italic;padding-left: 0cm;"
+                                    href="https://dexon.us/">Dexon</a></p>
+                            <p>Participated in the project for processes automation for health public entities.
+                                Helping to extract, transform, and load
+                                (ETL) data, and visualize it in interactive dashboards.</p>
+                        </td>
+                    </tr>
+                    <tr id="experience-TUK" class="experience">
+                        <td>
+                            <p class="table-title">2017 2018</p>
+                        </td>
+                        <td class="table-info">
+                            <p>Research Assistant</p>
+                            <p><a target="_blank" style="font-style: italic;padding-left: 0cm;"
+                                    href="https://hci.uni-kl.de/">Computer Graphics & HCI Group at TUK</a></p>
+                            <p>Designed and implemented a visual analytics tool to support failure detection
+                                in manufacturing processes.</p>
+                        </td>
+                    </tr>
+                    <tr id="experience-Caoba" class="experience">
+                        <td>
+                            <p class="table-title">2017</p>
+                        </td>
+                        <td class="table-info">
+                            <p>Researcher</p>
+                            <p><a target="_blank" style="font-style: italic;padding-left: 0cm;"
+                                    href="http://alianzacaoba.co/">Alianza Caoba</a></p>
+                            <p>Participated in a project along with the Secretary of Finance in Bogota to
+                                identify inaccurate taxpayers in real
+                                property taxes.
+                            </p>
+                        </td>
+                    </tr>
+                    <tr id="experience-TOMSA" class="experience">
+                        <td>
+                            <p class="table-title">2016</p>
+                        </td>
+                        <td class="table-info">
+                            <p>Junior Researcher</p>
+                            <p><a target="_blank" style="font-style: italic;padding-left: 0cm;"
+                                    href="https://www.i3s.unice.fr/en">I3S and Espace Laboratory at Sophia
+                                    Antipolis</a></p>
+                            <p>Worked in the project Transport Oriented Modeling for urban denSification
+                                Analysis (TOMSA)/ECOS Nord, building a urban
+                                decision support platform, which holds a Urban Agent-Based Model (ABM) to
+                                simulate the relocation of households under a
+                                spatial and possibilistic scenario and visualize multiple scenarios.
+                            </p>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <div id="end"></div>     
 	</main>
-	<script src="/app.js"></script>
+	<script src="/main.js"></script>
 </body>
