--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
 
 <body style="margin-bottom: 2cm;">
     <div id="header" style="visibility: hidden;">
-        <h1 class="header-left">Meili Vanegas-Hernandez</h1>
+        <h1 class="header-left">Sandbag</h1>
         <div class="header-right">
             <h2>Data Analysis • Data Visualization</h2>
         </div>
     </div>
     <div id="margin-top" style="min-height: 33vh;"></div>
     <div id="title" class="title">
-        <h1>Meili Vanegas-Hernandez</h1>
+        <h1>Sandbag</h1>
         <h2>Data Analysis • Data Visualization</h2>
     </div>        
     <div class="valign-wrapper center-align" style="min-height: 33vh;display: block;">
@@ -91,132 +91,14 @@
     </div>    
 	<main>
         <div id="chapter1"></div>
-        <div id="tools">
-            <div id="charts" class="parent">
-                <div id="svg-tools" class="chart" style="top:0px;"></div>
-                <div id="svg-skills" class="chart"></div>
+        <div id="charts" class="row">
+            <div class="col s8 m8 l8">
+                <div class="row">
+                    <div id="svg-tools" class="chart col m6 s12"></div>
+                    <div id="svg-skills" class="chart col m6 s12"></div>
+                </div>
             </div>
-            <div id="details-tools" class="right">
-                <div style="min-height: 33vh;"></div>
-                <table>
-                    <tr id="experience-Sandbag" class="experience">
-                        <td>
-                            <p class="table-title">2023</p>
-                        </td>
-                        <td class="table-info">
-                            <p>Data and Policy Analyst</p>
-                            <p><a target="_blank" style="font-style: italic;padding-left: 0cm;"
-                                    href="https://sandbag.be">Sandbag</a>
-                            </p>
-                            <p>Performed quantitative analysis of EU carbon markets such as ETS and CBAM to
-                                support data-driven advocacy.</p>
-                            <p>Managed and developed data flows, dashboards, and analytical tools that supported
-                                loophole identification in policies, enhancing policy analysis.</p>
-                        </td>
-                    </tr>							
-                    <tr id="experience-Lineas" class="experience">
-                        <td>
-                            <p class="table-title">2021 2023</p>
-                        </td>
-                        <td class="table-info">
-                            <p>Business Intelligence Analyst</p>
-                            <p><a target="_blank" style="font-style: italic;padding-left: 0cm;"
-                                    href="https://lineas.net/en/">Lineas</a>
-                            </p>
-                            <p>Translated business needs into data projects, extracting, transforming,
-                                and presenting KPIs across various organisational areas and supporting
-                                decision-making.</p>
-                            <p>Provided Tableau training to creators and business partners, enhancing their ability
-                                to utilise dashboards for decision-making.</p>
-                        </td>
-                    </tr>
-                    <tr id="experience-RTBF" class="experience">
-                        <td>
-                            <p class="table-title">2020 2021</p>
-                        </td>
-                        <td class="table-info">
-                            <p>Data Analyst</p>
-                            <p><a target="_blank" style="font-style: italic;padding-left: 0cm;"
-                                    href="https://www.rtbf.be/">RTBF</a>
-                            </p>
-                            <p>Introduced data-driven decision-making into publishing, editorial, and marketing
-                                processes while developing a robust DataOps environment.</p>
-                            <p>Participated in the creation of the recommendation system and collaborated with
-                                journalists on producing data-driven and interactive content.</p>
-                        </td>
-                    </tr>
-                    <tr id="experience-Steer" class="experience">
-                        <td>
-                            <p class="table-title">2019 2020</p>
-                        </td>
-                        <td class="table-info">
-                            <p>Consultant</p>
-                            <p><a target="_blank" style="font-style: italic;padding-left: 0cm;"
-                                    href="https://be.steergroup.com/">Steer</a>
-                            </p>
-                            <p>Participated in transport model projects for various Latin American cities
-                                supporting urban planning decisions.</p>
-                            <p>Developed a visual analytics tool for trip matrices
-                                decision making in transport and urbanism.</p>
-                        </td>
-                    </tr>
-                    <tr id="experience-Dexon" class="experience">
-                        <td>
-                            <p class="table-title">2018</p>
-                        </td>
-                        <td class="table-info">
-                            <p>Developer</p>
-                            <p><a target="_blank" style="font-style: italic;padding-left: 0cm;"
-                                    href="https://dexon.us/">Dexon</a></p>
-                            <p>Participated in the project for processes automation for health public entities.
-                                Helping to extract, transform, and load
-                                (ETL) data, and visualize it in interactive dashboards.</p>
-                        </td>
-                    </tr>
-                    <tr id="experience-TUK" class="experience">
-                        <td>
-                            <p class="table-title">2017 2018</p>
-                        </td>
-                        <td class="table-info">
-                            <p>Research Assistant</p>
-                            <p><a target="_blank" style="font-style: italic;padding-left: 0cm;"
-                                    href="https://hci.uni-kl.de/">Computer Graphics & HCI Group at TUK</a></p>
-                            <p>Designed and implemented a visual analytics tool to support failure detection
-                                in manufacturing processes.</p>
-                        </td>
-                    </tr>
-                    <tr id="experience-Caoba" class="experience">
-                        <td>
-                            <p class="table-title">2017</p>
-                        </td>
-                        <td class="table-info">
-                            <p>Researcher</p>
-                            <p><a target="_blank" style="font-style: italic;padding-left: 0cm;"
-                                    href="http://alianzacaoba.co/">Alianza Caoba</a></p>
-                            <p>Participated in a project along with the Secretary of Finance in Bogota to
-                                identify inaccurate taxpayers in real
-                                property taxes.
-                            </p>
-                        </td>
-                    </tr>
-                    <tr id="experience-TOMSA" class="experience">
-                        <td>
-                            <p class="table-title">2016</p>
-                        </td>
-                        <td class="table-info">
-                            <p>Junior Researcher</p>
-                            <p><a target="_blank" style="font-style: italic;padding-left: 0cm;"
-                                    href="https://www.i3s.unice.fr/en">I3S and Espace Laboratory at Sophia
-                                    Antipolis</a></p>
-                            <p>Worked in the project Transport Oriented Modeling for urban denSification
-                                Analysis (TOMSA)/ECOS Nord, building a urban
-                                decision support platform, which holds a Urban Agent-Based Model (ABM) to
-                                simulate the relocation of households under a
-                                spatial and possibilistic scenario and visualize multiple scenarios.
-                            </p>
-                        </td>
-                    </tr>
-                </table>
+            <div id="details-experiences" class="col s4 m4 l4">
             </div>
         </div>
 	</main>
