Add transitions in tree map

--- a/index.html
+++ b/index.html
@@ -93,10 +93,12 @@
         <div id="chapter1"></div>
         <div id="charts" class="row">
             <div class="col s8 m8 l8">
-                <div class="row">
-                    <div id="svg-tools" class="chart col m6 s12"></div>
-                    <div id="svg-skills" class="chart col m6 s12"></div>
-                </div>
+                <div id="right-wrapper">
+					<div class="row">
+						<div id="svg-tools" class="col m6 s12"></div>
+						<div id="svg-skills" class="col m6 s12"></div>
+					</div>
+				</div>
             </div>
             <div id="details-experiences" class="col s4 m4 l4">
             </div>
