Add transitions in force graph

--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
 
 <body style="margin-bottom: 2cm;">
     <div id="header" style="visibility: hidden;">
-        <h1 class="header-left">Sandbag</h1>
+        <h1 class="header-left">Meili Vanegas-Hernandez</h1>
         <div class="header-right">
             <h2>Data Analysis • Data Visualization</h2>
         </div>
     </div>
     <div id="margin-top" style="min-height: 33vh;"></div>
     <div id="title" class="title">
-        <h1>Sandbag</h1>
+        <h1>Meili Vanegas-Hernandez</h1>
         <h2>Data Analysis • Data Visualization</h2>
     </div>        
     <div class="valign-wrapper center-align" style="min-height: 33vh;display: block;">
