Add transitions in force graph

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
 
 	<!-- Load Modules -->
+	<script src="/assets/config.js"></script>
 	<script src="/js/force_graph.js"></script>
 	<script src="/js/tree_map.js"></script>
 
@@ -94,6 +95,8 @@
         <div id="charts" class="row">
             <div class="col s8 m8 l8">
                 <div id="right-wrapper">
+					<h6><b>Experience & Projects</b></h6>
+					<hr>
 					<div class="row">
 						<div id="svg-tools" class="col m6 s12"></div>
 						<div id="svg-skills" class="col m6 s12"></div>
@@ -103,6 +106,18 @@
             <div id="details-experiences" class="col s4 m4 l4">
             </div>
         </div>
+		<div id="contact" class="row">
+			<h6><b>Contact</b></h6>
+			<hr>
+			<div class="center-align col s6 m6 x4 offset-s3 offset-m3 offset-x4">
+				<a style="margin:0px 5%" target="_blank" href="https://github.com/meilivh">
+					<i class="medium black-text fa fa-github"></i>
+				</a>
+				<a style="margin:0px 5%" target="_blank" href="https://www.linkedin.com/in/meilivh/">
+					<i class="medium black-text fa fa-linkedin"></i>
+				</a>
+			</div>
+		</div>
 	</main>
 	<script src="/main.js"></script>
 </body>
