--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 </head>
 
 <body style="margin-bottom: 2cm;">
-    <div id="header" style="visibility: hidden;">
+    <div id="header" class="z-depth-2">
         <h1 class="header-left">Meili Vanegas-Hernandez</h1>
         <div class="header-right">
             <h2>Data Analysis • Data Visualization</h2>
@@ -106,18 +106,21 @@
             <div id="details-experiences" class="col s4 m4 l4">
             </div>
         </div>
+	</main>
+	<div id="footer" class="z-depth-2">
 		<div id="contact" class="row">
-			<h6><b>Contact</b></h6>
-			<hr>
-			<div class="center-align col s6 m6 x4 offset-s3 offset-m3 offset-x4">
+			<div class="col s4 m4 x4">
+				Copyright © Meili Vanegas-Hernandez 2024
+			</div>
+			<div class="center-align col s4 m4 x4">
 				<a style="margin:0px 5%" target="_blank" href="https://github.com/meilivh">
-					<i class="medium black-text fa fa-github"></i>
+					<i class="small black-text fa fa-github"></i>
 				</a>
 				<a style="margin:0px 5%" target="_blank" href="https://www.linkedin.com/in/meilivh/">
-					<i class="medium black-text fa fa-linkedin"></i>
+					<i class="small black-text fa fa-linkedin"></i>
 				</a>
 			</div>
-		</div>
-	</main>
+        </div>	
+	</div>
 	<script src="/main.js"></script>
 </body>
