Add projects and Update experiences

--- a/index.html
+++ b/index.html
@@ -98,8 +98,12 @@
 					<h6><b>Experience & Projects</b></h6>
 					<hr>
 					<div class="row">
-						<div id="svg-tools" class="col m6 s12"></div>
-						<div id="svg-skills" class="col m6 s12"></div>
+						<div id="svg-skills" class="chart col m6 s12">
+							<p id="skills-title">Skills & Domains</p>
+						</div>
+						<div id="svg-tools" class="chart col m6 s12">
+							<p>Tools</p>
+						</div>
 					</div>
 				</div>
             </div>
