--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<meta name="author" content="Meili Vanegas-Hernandez">
 	<meta name="description" content="Meili Vanegas-Hernandez">
 	<meta property="og:title" content="Meili Vanegas-Hernandez" />
-	<meta property="og:image" content="http://meilivh.github.io/images/mvhdez.png" />
-	<link rel="icon" href="./images/favicon.png">
+	<meta property="og:image" content="assets/images/favicon.png" />
+	<link rel="icon" href="assets/images/favicon.png">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
 		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
