--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
 
 <head>
-	<title>Meili Vanegas-Hernandez</title>
+	<title>Meili Vanegas-Hernandez • Data Analysis • Data Visualization</title>
 	<meta charset="utf-8" />
 	<meta name="author" content="Meili Vanegas-Hernandez">
-	<meta name="description" content="Meili Vanegas-Hernandez">
+	<meta name="description" content="Meili Vanegas-Hernandez's website: Data Analysis • Data Visualization">
 	<meta property="og:title" content="Meili Vanegas-Hernandez" />
 	<meta property="og:image" content="assets/images/favicon.png" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="keywords" content="Data,Datanalaysis,DataViz,Datascience,Dataviz,Datavisualization,Plot,Chart,Graph,R,Python,D3">
 	<link rel="icon" href="assets/images/favicon.png">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
 		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -15,6 +17,13 @@
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+
+	<meta property="og:title" content="Meili Vanegas-Hernandez • Data Analysis • Data Visualization">
+	<meta property="og:image" content="assets/images/favicon.png">
+	<meta property="og:description" content="Meili Vanegas-Hernandez's website: Data Analysis • Data Visualization">
+	<meta property="og:url" content="https://www.meilivh.github.io">
+	<meta property="og:type" content="website">
+  
 
 	<!-- Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
