Add projects row

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div id="charts" class="row">
             <div class="col s8 m8 l8">
                 <div id="right-wrapper">
-					<h6><b>Experience & Projects</b></h6>
+					<h6><b>Experience</b></h6>
 					<hr>
 					<div class="row">
 						<div id="svg-skills" class="chart col m6 s12">
@@ -118,6 +118,10 @@
             <div id="details-experiences" class="col s4 m4 l4">
             </div>
         </div>
+		<div>
+			<h6><b>Projects</b></h6>
+			<div id="projects" class="row"></div>
+		</div>
 	</main>
 	<div id="footer" class="z-depth-2">
 		<div id="contact" class="row">
