Style projects subtitle

--- a/index.html
+++ b/index.html
@@ -123,11 +123,18 @@
 			<hr>
 			<div id="projects" class="row"></div>
 		</div>
+		<div>
+			<h6><b>Contact</b></h6>
+			<hr>
+			<div class="row">
+
+			</div>
+		</div>		
 	</main>
 	<div id="footer" class="z-depth-2">
 		<div id="contact" class="row">
 			<div class="col s4 m4 x4">
-				Copyright © Meili Vanegas-Hernandez 2024
+				© 2024 Copyright Meili Vanegas-Hernandez
 			</div>
 			<div class="center-align col s4 m4 x4">
 				<a style="margin:0px 5%" target="_blank" href="https://github.com/meilivh">
