Change copyright text

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 			<h6><b>Contact</b></h6>
 			<hr>
 			<div class="row">
-
+				<p>Contact me if you need </p>
 			</div>
 		</div>		
 	</main>
